welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:-7: error: not found: value arrayCount9
 val res = arrayCount9( t.getParameter(0).asInstanceOf[Array[Int]]);
           ^arrayCount9:2: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i<-0 to 3) {
        ^